--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egginc-mission-notifier"
-version = "0.5.0"
+version = "0.5.1"
 edition = "2021"
 
 [dependencies]
@@ -17,6 +17,7 @@ kstool = "0.2"
 kstool-helper-generator = "0.4"
 log = "0.4"
 prost = "0.13"
+rand = "0.8"
 regex = "1"
 reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls",
