--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egginc-mission-notifier"
-version = "1.0.1"
+version = "2.0.0-beta"
 edition = "2021"
 
 [dependencies]
@@ -9,6 +9,7 @@ async-trait = "0.1"
 base64 = "0.22.1"
 chrono = "0.4"
 chrono-tz = "0.10"
+serde_cbor = "0.11.2"
 clap = { version = "4", features = ["cargo"] }
 env_logger = "0.11"
 futures-util = "0.3"
@@ -23,6 +24,7 @@ reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls",
 ] }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
 tap = "1"
 teloxide = { version = "0.13", default-features = false, features = [
@@ -31,6 +33,7 @@ teloxide = { version = "0.13", default-features = false, features = [
 ] }
 tokio = { version = "1", features = ["full"] }
 toml = "0.8"
+flate2 = { version = "1.0.35", features = ["zlib"] }
 
 [build-dependencies]
 prost-build = "0.13.4"
