--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tap = "1"
 teloxide = { version = "0.13", default-features = false, features = [
     "rustls",
     "macros",
+    "ctrlc_handler",
 ] }
 tokio = { version = "1", features = ["full"] }
 toml = "0.8"
