--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,13 @@ toml = "0.8"
 
 [build-dependencies]
 prost-build = "0.13"
+
+[package.metadata.cross.target.aarch64-unknown-linux-musl]
+#image = "ghcr.io/cross-rs/aarch64-unknown-linux-musl:main"
+pre-build = [
+    "apt update && apt install -y unzip",
+    "curl -Lo protoc.zip https://github.com/protocolbuffers/protobuf/releases/download/v25.6/protoc-25.6-linux-x86_64.zip && unzip protoc.zip -d /usr/",
+]
+
+[package.metadata.cross.build]
+env.passthrough = ["PROTOC=/usr/bin/protoc"]
